--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,31 +1,32 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "declaration": false,
-    "removeComments": true,
-    "noLib": false,
-    "lib": ["es2016", "dom"],
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "pretty": true,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "noImplicitUseStrict": false,
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
-    "typeRoots": [
-      "../../node_modules/@types",
-      "../../node_modules"
-    ],
-    "types": [
-      "node",
-      "jasmine",
-      "systemjs"
-    ]
-  },
-  "compileOnSave": false
+    "compilerOptions": {
+        "target": "es5",
+        "module": "commonjs",
+        "declaration": false,
+        "removeComments": true,
+        "noLib": false,
+        "lib": ["es2016", "dom"],
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "sourceMap": true,
+        "pretty": true,
+        "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
+        "noImplicitAny": false,
+        "noImplicitReturns": true,
+        "noImplicitUseStrict": false,
+        "noFallthroughCasesInSwitch": true,
+        "allowSyntheticDefaultImports": true,
+        "typeRoots": [
+            "../../node_modules/@types",
+            "../../node_modules",
+            "../../node_modules/tns-core-modules/*"
+        ],
+        "types": [
+            "node",
+            "jasmine",
+            "systemjs"
+        ]
+    },
+    "compileOnSave": false
 }
